welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: type boolean
var fini:boolean=false;
         ^BDRBuggle:5: error: too many arguments for method litMessage: ()String
	if (litMessage("R")) { droite(); avance()}
                      ^BDRBuggle:6: error: too many arguments for method litMessage: ()String
	else if (litMessage("L")) {
                           ^BDRBuggle:10: error: too many arguments for method litMessage: ()String
	else if (litMessage("B")) {
                           ^BDRBuggle:14: error: too many arguments for method litMessage: ()String
	else if (litMessage("A")) {
                           ^BDRBuggle:17: error: too many arguments for method litMessage: ()String
	else if (litMessage("X")) {
                           ^BDRBuggle:22: error: too many arguments for method litMessage: ()String
	else if (litMessage("Z")) { 
                           ^BDRBuggle:25: error: too many arguments for method litMessage: ()String
	else if (litMessage("C")) { 
                           ^BDRBuggle:30: error: too many arguments for method litMessage: ()String
	else if (litMessage("I")) {
                           ^BDRBuggle:35: error: too many arguments for method litMessage: ()String
	else if (litMessage("Y")) {
                           ^